--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "starwars-wiki",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://hugodf.xyz/starwars-wiki",
+  "homepage": "https://HugoDF.github.io/starwars-wiki",
   "devDependencies": {
     "chai": "^3.5.0",
     "enzyme": "^2.7.1",
+    "gh-pages": "^0.12.0",
     "react-addons-test-utils": "^15.4.2",
     "react-scripts": "0.8.5",
     "sinon": "^1.17.7"
@@ -24,6 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
   }
 }
